--- a/index.html
+++ b/index.html
@@ -2,11 +2,92 @@
 <html>
 <head>
 	<title>Le Scone</title>
-	<meta name="description" content="Le Scone - Restaurante">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" href="/css/style.css">
+	<meta name="description" content="Le Scone - Restaurante" />
+	<meta name="viewport" content="width=device-width, initial-scale=1" />
+	<link rel="preconnect" href="https://fonts.gstatic.com" />
+	<link href="https://fonts.googleapis.com/css2?family=Aref+Ruqaa&family=PT+Mono&display=swap" rel="stylesheet" />
+	<link rel="stylesheet" href="/css/style.css" />
 </head>
 <body>
-	
+	<main class="container intro">
+		<div class="grid-5">
+			<img src="/img/lescone.png" alt="Le Scone" class="logo" />
+			<div class="intro-info">
+				<p>De Seg. à Sab.<span class="aberto"></span></br>das 07:00h às 18:00h</p>
+				<p>Praia de Botafogo, 300</br>Rio de Janeiro - RJ</p>
+			</div>
+			<p class="intro-telefone">+55 021 2412-3333</p>
+		</div>
+		<div class="grid-7">
+			<img src="/img/foto.png" alt="Foto de Le Scone" />
+		</div>
+	</main>
+
+	<section class="container menu">
+		<h1 class="grid-4 titulo">Menu</h1>
+		<div class="grid-7 offset-1">
+			<div class="menu-item">
+				<img src="/img/prato-1.png" alt="Foto Prato 1">
+				<h2>Emtradas</h2>
+				<ul>
+					<li><span>R$1,70</span>Ovos Mexidos</li>
+					<li><span>R$2,70</span>Scones de Frutas</li>
+					<li><span>R$3,70</span>Joelho de Queijo</li>
+					<li><span>R$4,70</span>Presunto Cozido</li>
+					<li><span>R$3,70</span>Coxinha de Frango</li>
+				</ul>
+			</div>
+			<div class="menu-item">
+				<img src="/img/prato-2.png" alt="Foto Prato 2">
+				<h2>Pratos Principais</h2>
+				<ul>
+					<li><span>R$10,70</span>Penne com Queijo</li>
+					<li><span>R$22,70</span>Feijoada</li>
+					<li><span>R$33,70</span>Costela ao Molho</li>
+					<li><span>R$14,70</span>Medalão de Frango</li>
+					<li><span>R$13,70</span>Coxinha de Frango</li>
+				</ul>
+			</div>
+		</div>
+	</section>
+
+	<section class="container contato">
+		<h2 class="grid-4 titulo">Contato</h2>
+		<div class="grid-7 offset-1">
+			<form action="">
+				<label for="nome">Nome</label>
+				<input name="nome" type="text" />
+				<div class="row">
+					<div class="grid-7">
+						<label for="email">E-mail</label>
+						<input type="email" name="email" id="email" />
+					</div>
+					<div class="grid-5">
+						<label for="tel">Telefone</label>
+						<input type="tel" name="tel" id="tel" />
+					</div>
+				</div>
+				<label for="msg">Mensagem</label>
+				<textarea name="msg" id="msg" cols="30" rows="10"></textarea>
+				<input class="button" type="button" value="Enviar" />
+			</form>
+			<div class="contat-info">
+				<p>contato@lescone.com ////</p>
+				<p>+55 021 2412-3333 ////</p>
+			</div>
+			<a href="http://maps.google.com" class="contato-mapa">
+				<img src="/img/map.png" alt="Como chegar em Le Scone" />
+			</a>
+		</div>
+	</section>
+
+	<footer>
+		<div class="container">
+			<p>Le Scone © 1989 - 2020. Alguns direitos reservados</p>
+			<a href="http://github.com/rickyalbuq">
+				<img src="/img/lescone-icone.png" alt="Le Scone Ícone" />
+			</a>
+		</div>
+	</footer>
 </body>
 </html>
