--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 			<p class="intro-telefone">+55 021 2412-3333</p>
 		</div>
 		<div class="grid-7">
-			<img src="/img/foto.png" alt="Foto de Le Scone" />
+			<img class="intro-foto" src="/img/foto.png" alt="Foto de Le Scone" />
 		</div>
 	</main>
 
