--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 		<div class="grid-7 offset-1">
 			<div class="menu-item">
 				<img src="/img/prato-1.png" alt="Foto Prato 1">
-				<h2>Emtradas</h2>
+				<h2>Entradas</h2>
 				<ul>
 					<li><span>R$1,70</span>Ovos Mexidos</li>
 					<li><span>R$2,70</span>Scones de Frutas</li>
@@ -71,7 +71,7 @@
 				<textarea name="msg" id="msg" cols="30" rows="10"></textarea>
 				<input class="button" type="button" value="Enviar" />
 			</form>
-			<div class="contat-info">
+			<div class="contato-info">
 				<p>contato@lescone.com ////</p>
 				<p>+55 021 2412-3333 ////</p>
 			</div>
