--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	<link rel="preconnect" href="https://fonts.gstatic.com" />
 	<link href="https://fonts.googleapis.com/css2?family=Aref+Ruqaa&family=PT+Mono&display=swap" rel="stylesheet" />
-	<link rel="stylesheet" href="/css/style.css" />
+	<link rel="stylesheet" href="./css/style.css" />
 </head>
 <body>
 	<main class="container intro">
 		<div class="grid-5">
-			<img src="/img/lescone.png" alt="Le Scone" class="logo" />
+			<img src="./img/lescone.png" alt="Le Scone" class="logo" />
 			<div class="intro-info">
 				<p>De Seg. à Sab.<span class="aberto"></span></br>das 07:00h às 18:00h</p>
 				<p>Praia de Botafogo, 300</br>Rio de Janeiro - RJ</p>
@@ -19,7 +19,7 @@
 			<p class="intro-telefone">+55 021 2412-3333</p>
 		</div>
 		<div class="grid-7">
-			<img class="intro-foto" src="/img/foto.png" alt="Foto de Le Scone" />
+			<img class="intro-foto" src="./img/foto.png" alt="Foto de Le Scone" />
 		</div>
 	</main>
 
@@ -27,7 +27,7 @@
 		<h1 class="grid-4 titulo">Menu</h1>
 		<div class="grid-7 offset-1">
 			<div class="menu-item">
-				<img src="/img/prato-1.png" alt="Foto Prato 1">
+				<img src="./img/prato-1.png" alt="Foto Prato 1">
 				<h2>Entradas</h2>
 				<ul>
 					<li><span>R$1,70</span>Ovos Mexidos</li>
@@ -38,7 +38,7 @@
 				</ul>
 			</div>
 			<div class="menu-item">
-				<img src="/img/prato-2.png" alt="Foto Prato 2">
+				<img src="./img/prato-2.png" alt="Foto Prato 2">
 				<h2>Pratos Principais</h2>
 				<ul>
 					<li><span>R$10,70</span>Penne com Queijo</li>
@@ -76,7 +76,7 @@
 				<p>+55 021 2412-3333 ////</p>
 			</div>
 			<a href="http://maps.google.com" class="contato-mapa">
-				<img src="/img/map.png" alt="Como chegar em Le Scone" />
+				<img src="./img/map.png" alt="Como chegar em Le Scone" />
 			</a>
 		</div>
 	</section>
@@ -85,7 +85,7 @@
 		<div class="container">
 			<p>Le Scone © 1989 - 2020. Alguns direitos reservados</p>
 			<a href="http://github.com/rickyalbuq">
-				<img src="/img/lescone-icone.png" alt="Le Scone Ícone" />
+				<img src="./img/lescone-icone.png" alt="Le Scone Ícone" />
 			</a>
 		</div>
 	</footer>
